k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: DevOpsHub-backend
  namespace: DevOpsHub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: DevOpsHub-backend
  template:
    metadata:
      labels:
        app: devopshub-backend
    spec:
      containers:
        - name: backend
          image: devopshub/backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: DevOpsHub-backend
  namespace: DevOpsHub
spec:
  selector:
    app: DevOpsHub-backend
  ports:
    - port: 80
      targetPort: 8080
